# swarmit

./: .gitignore  .gitmodules  Dockerfile  LICENSE  Makefile  README.md  entrypoint.sh  pyproject.toml  swarmit-bootloader-dotbot-v2.emProject  swarmit-bootloader-dotbot-v3.emProject  swarmit-bootloader-nrf52840dk.emProject  swarmit-bootloader-nrf5340dk.emProject  swarmit-netcore.emProject  tox.ini
.github/workflows/: continuous-integration.yml
device/bootloader/: bootloader-app.emProject
device/bootloader-single-core/: bootloader-app.emProject
device/bootloader-single-core/Setup/: MemoryMap.xml  nrf52840_Registers.xml
device/bootloader-single-core/Source/: main.c  nvmc.c  protocol.h
device/bootloader-single-core/System/: fault_handlers.c  startup.c  system_init.c
device/bootloader/Source/: battery.h  cmse_implib.c  cmse_implib.h  device.h  ipc.h  lh2_calibration.h  localization.c  localization.h  main.c  mari.c  mari.h  nvmc.c  protocol.c  protocol.h  radio.h  rng.c  rng.h  tz.h
device/bootloader/System/: clock.c  clock.h  fault_handlers.c  fault_handlers.h  startup.c
device/network_core/Setup/: MemoryMap.xml
device/network_core/Source/: ipc.h  main.c  protocol.c  protocol.h
device/network_core/System/: fault_handlers.c  startup.c
sample/Source/: main.c
sample/System/: fault_handlers.c  fault_handlers.h  startup.c
swarmit/cli/: config_sample.toml  main.py
swarmit/dashboard/: main.py
swarmit/dashboard/frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
swarmit/dashboard/frontend/src/: App.css  App.tsx  BotMap.tsx  CalendarPage.tsx  HomePage.tsx  Login.tsx  OnlineDotBotPage.tsx  main.tsx
swarmit/testbed/: adapter.py  controller.py  helpers.py  logger.py  model.py  protocol.py  webserver.py
swarmit/tests/: test_adapter.py  test_cli.py  test_controller.py  test_dashboard_main.py  test_helpers.py  test_model.py  test_webserver.py  utils.py
utils/hooks/: sdist.py
